[package]
name = "common"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gpui.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
itertools.workspace = true
chrono.workspace = true
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
reqwest.workspace = true
log.workspace = true

dirs = "5.0"
nostr = { git = "https://github.com/rust-nostr/nostr" }
