[package]
name = "lume"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "lume"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
assets = { path = "../assets" }
state = { path = "../state" }
account = { path = "../account" }

gpui.workspace = true
gpui-component.workspace = true
gpui_tokio.workspace = true
reqwest_client.workspace = true

nostr-connect.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
dirs.workspace = true
log.workspace = true
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
oneshot.workspace = true

tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
flume = { version = "0.12", default-features = false, features = ["async", "select"] }
