[package]
name = "note"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
state = { path = "../state" }

gpui.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
smallvec.workspace = true
flume.workspace = true
log.workspace = true
