[package]
name = "state"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }

nostr-sdk.workspace = true
nostr-lmdb.workspace = true
nostr-gossip-memory.workspace = true

gpui.workspace = true
smol.workspace = true
smallvec.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

rustls = "0.23.23"
